# wiping

./: .gitignore  README.md  bash_chmod.sh
data/0101/direct/: 000_2.yaml  000_4.yaml  004_10.yaml  004_2.yaml  004_3.yaml  004_4.yaml  004_7.yaml  004_8.yaml  004_9.yaml  008_7.yaml  008_raw.yaml  012_8.yaml  016_10.yaml  016_5.yaml  016_6.yaml
data/0101/motion_yaml/: 002.yaml  011.yaml  012.yaml  013.yaml  014.yaml
data/0101/tactile_raw/: 008.csv  012.csv  014.csv  015.csv  017.csv
data/0102/direct/: 000_5.yaml  000_6.yaml  000_7.yaml  000_9.yaml  008_10.yaml  008_11.yaml  008_2.yaml  008_3.yaml  008_4.yaml  008_5.yaml  008_6.yaml  008_7.yaml  008_8.yaml  008_9.yaml  008_raw.yaml  012_10.yaml  012_11.yaml  012_2.yaml  012_3.yaml  012_4.yaml  012_5.yaml  012_6.yaml  012_7.yaml  012_8.yaml  012_9.yaml  012_raw.yaml
data/0102/motion_yaml/: 004.yaml  005.yaml  006.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml  016.yaml  018.yaml
data/0102/tactile_raw/: 001.csv  004.csv  005.csv  008.csv  009.csv  010.csv  011.csv  012.csv  013.csv  014.csv  015.csv
data/0106/direct/: 000_10.yaml  000_11.yaml  000_2.yaml  000_3.yaml  000_4.yaml  000_5.yaml  000_6.yaml  000_7.yaml  000_8.yaml  000_9.yaml  000_raw.yaml  004_10.yaml  004_11.yaml  004_2.yaml  004_3.yaml  004_4.yaml  004_5.yaml  004_6.yaml  004_7.yaml  004_8.yaml  004_9.yaml  004_raw.yaml  008_10.yaml  008_11.yaml  008_2.yaml  008_3.yaml  008_4.yaml  008_5.yaml  008_6.yaml  008_7.yaml  008_8.yaml  008_9.yaml  008_raw.yaml  012_10.yaml  012_11.yaml  012_2.yaml  012_3.yaml  012_4.yaml  012_5.yaml  012_6.yaml  (+4 more)
data/0106/motion_yaml/: 000.yaml  001.yaml  002.yaml  003.yaml  004.yaml  005.yaml  006.yaml  007.yaml  008.yaml  009.yaml  010.yaml  011.yaml  012.yaml  013.yaml  014.yaml  015.yaml
data/0106/tactile_raw/: 000.csv  001.csv  002.csv  003.csv  004.csv  005.csv  006.csv  007.csv  008.csv  009.csv  010.csv  011.csv  012.csv  013.csv  014.csv  015.csv
data/0925/direct/: 002.yaml  007.yaml  013.yaml  014.yaml  016.yaml  017.yaml
data/0925/motion_yaml/: 000.yaml  001.yaml  002.yaml  004.yaml  005.yaml  006.yaml  007.yaml  009.yaml  011.yaml  013.yaml  014.yaml  016.yaml
data/startposi/: startposition0106.yaml  startposition1112.yaml  startposition1226.yaml  startposition2.yaml
online/: CMakeLists.txt  package.xml  setup.py
online/src/: CAE.py  MTRNN.py  crop.py  mydataset.py  online.py  torobo_func.py
rqt_mypkg/: CMakeLists.txt  package.xml  plugin.xml
rqt_mypkg/src/: tactilebar.py
rqt_mypkg/ui/: tactilebar.ui  torobo_whole_body_manager.ui
torobo_robot/: CHANGELOG.md  README.md
torobo_robot/torobo_bringup/: CMakeLists.txt  package.xml
torobo_robot/torobo_collision_detector/: CMakeLists.txt  package.xml  setup.py  torobo_collision_detector.xml
torobo_robot/torobo_collision_detector/launch/: current_state_collision_detector.launch  current_state_self_collision_checker.launch  torobo_collision_detector.launch
torobo_robot/torobo_collision_detector/scripts/: current_state_collision_detector_node.py  current_state_self_collision_checker_node.py
torobo_robot/torobo_collision_detector/src/: ToroboCollisionDetector.cpp  ToroboCollisionDetector.h  torobo_collision_detector_node.cpp
torobo_robot/torobo_collision_detector/src/torobo_collision_detector/: check_collision_client.py
torobo_robot/torobo_common/: CMakeLists.txt  package.xml  setup.py
torobo_robot/torobo_control/: CMakeLists.txt  package.xml  setup.py  torobo_control.xml
torobo_robot/torobo_demo/: CMakeLists.txt  README.md  package.xml
torobo_robot/torobo_description/: CMakeLists.txt  package.xml
torobo_robot/torobo_description/config/models/arm/: controllers.yaml  torobo.srdf
torobo_robot/torobo_description/config/products/: TWENDY.yaml
torobo_robot/torobo_description/launch/: load_robot_config.launch  torobo_display.launch  torobo_display.rviz
torobo_robot/torobo_description/scripts/: load_controller_config.py  load_srdf.py
torobo_robot/torobo_description/urdf/: torobo.gazebo  torobo.transmission.xacro  torobo.urdf.xacro
torobo_robot/torobo_driver/: CMakeLists.txt  package.xml  setup.py  torobo_driver.xml
torobo_robot/torobo_dynamics/: CMakeLists.txt  package.xml  torobo_dynamics.xml
torobo_robot/torobo_gazebo/: CMakeLists.txt  package.xml
torobo_robot/torobo_gazebo_ros_control/: CHANGELOG.rst  CMakeLists.txt  package.xml  robot_hw_sim_plugins.xml
torobo_robot/torobo_gui/: CMakeLists.txt  package.xml  setup.py
torobo_robot/torobo_motion_manager/: CMakeLists.txt  package.xml  setup.py
torobo_robot/torobo_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
torobo_robot/torobo_msgs/: CMakeLists.txt  package.xml
torobo_robot/torobo_msgs/action/: MoveHomePosition.action  MoveTeachingPoint.action  MoveTeachingTrajectory.action
torobo_robot/torobo_msgs/msg/: ToroboCommand.msg  ToroboDynamics.msg  ToroboJointState.msg
torobo_robot/torobo_msgs/srv/: CheckCollision.srv  DeleteTeachingPoint.srv  DeleteTeachingTrajectory.srv  ErrorReset.srv  GetJointState.srv  GetServoState.srv  GetTeachingPoint.srv  GetTeachingPointNames.srv  GetTeachingTrajectory.srv  GetTeachingTrajectoryNames.srv  GetToroboJointState.srv  RecordTeachingPoint.srv  RecordTeachingTrajectory.srv  SendCommonCommand.srv  SetControlMode.srv  SetGeneralOutputRegister.srv  SetPayloadParam.srv  SetRobotControllerParameter.srv
torobo_robot/torobo_operation/: CMakeLists.txt  package.xml
torobo_robot/torobo_resources/: CMakeLists.txt  package.xml
torobo_robot/torobo_resources/Base/TRBB-TWDY-001/urdf/: base.urdf.xacro
torobo_robot/torobo_resources/TWDY-R-C-001-7/meshes/: base.dae  link0.dae  link1.dae  link2.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
torobo_robot/torobo_resources/TWDY-R-C-001-7/urdf/: arm.gazebo  arm.urdf.xacro
torobo_robot/torobo_robot/: CMakeLists.txt  package.xml
touchence/: CMakeLists.txt  package.xml
touchence/src/: old_sensing.py  sensing.py
wiping_bringup/: CMakeLists.txt  package.xml
wiping_bringup/launch/: wiping_bringup.launch
(+3122 files in other folders)
