<?xml version="1.0"?>
<package>
  <name>torobo_description</name>
  <version>0.1.0</version>
  <description>Torobo URDF description</description>

  <maintainer email="info@robotics.tokyo">torobo</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
</package>
